# ymtclpp

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  mk_builddir.sh
YmTclpp/: TclBase.h  TclCmd.h  TclObj.h  TclVarTrace.h
cmake/: ym_add_library.cmake
etc/: YmTclppConfig-version.cmake.in  YmTclppConfig.cmake.in  do_cmake.sh.in
src/: StrBuf.h  TclBase.cc  TclCmd.cc  TclObj.cc  TclVarTrace.cc
tests/: tclAppInit.cc
